[tool.poetry]
name = "sql-db-fake-filler"
version = "0.1.0"
description = ""
authors = ["AusAura <91804331+AusAura@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^19.6.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
